--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,6 +13,10 @@
 			"preLaunchTask": {
 				"type": "npm",
 				"script": "watch"
+			},
+			// 客户端应得到的环境变量：服务器bin的路径
+			"env": {
+				"SERVER_PATH": "${workspaceRoot}/target/debug/lisp-egg-language-server"
 			}
 		},
 		{
