--- a/.vscodeignore
+++ b/.vscodeignore
@@ -19,3 +19,13 @@ client/node_modules/**
 !client/node_modules/vscode-languageserver-types/**
 !client/node_modules/{minimatch,brace-expansion,concat-map,balanced-match}/**
 !client/node_modules/{semver,lru-cache,yallist}/**
+
+# 参考 tower-lsp-boilerplate
+.vscode
+node_modules
+out/
+src/
+tsconfig.json
+webpack.config.js
+client/**
+target
