初步地支持多语言 & 精简代码

--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
 		"Programming Languages"
 	],
 	"activationEvents": [
-		"onLanguage:lisp"
+		"onLanguage:lisp",
+		"onLanguage:scheme",
+		"onLanguage:python"
 	],
 	"main": "./client/out/extension",
 	"contributes": {
