--- a/package.json
+++ b/package.json
@@ -22,13 +22,13 @@
 			"type": "object",
 			"title": "egg-support configuration",
 			"properties": {
-				"lispEgglanguageServer.maxNumberOfProblems": {
+				"EgglanguageServer.maxNumberOfProblems": {
 					"scope": "resource",
 					"type": "number",
 					"default": 100,
 					"description": "Controls the maximum number of problems produced by the server."
 				},
-				"lispEgglanguageServer.trace.server": {
+				"EgglanguageServer.trace.server": {
 					"scope": "window",
 					"type": "string",
 					"enum": [
