--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -7,9 +7,9 @@ edition = "2021"
 
 [dependencies]
 chumsky = "1.0.0-alpha.3"
-env_logger = "0.9.0"
-ropey = "1.5.0"
-serde_json = "1.0.78"
+env_logger = "^0.9.0"
+ropey = "^1.5.0"
+serde_json = "^1.0.78"
 tokio = { version = "1.17.0", features = ["full"] }
 tower-lsp = { version = "0.19.0", features = ["proposed"]}
 serde = { version = "1.0", features = ["derive"] }
