多语言支持初步实现

--- a/.github/main.yml
+++ b/.github/main.yml
@@ -1,6 +1,10 @@
 name: Run typos to check spelling
 
-on: [push]
+on:
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
 jobs:
   run:
