--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -23,7 +23,7 @@ egg = "0.9.3"
 # 临时：egg 的依赖
 # [dev-dependencies]
 fxhash = "0.2.1"
-ordered-float = "3.0.0"
+ordered-float = {version = "3.0.0", optional = true}
 
 # tree_sitter
 tree-sitter = "0.20.9"
@@ -34,3 +34,7 @@ tree-sitter-c = "0.20.2"
 tree-sitter-sexp = { git = "https://github.com/AbstractMachinesLab/tree-sitter-sexp" }
 tree-sitter-scheme = { git = "https://github.com/6cdh/tree-sitter-scheme.git"}
 tree-sitter-java = "0.20.0"
+
+[features]
+# default = ["float"]
+float = ["ordered-float"]	# TODO 还没有完全实现
