--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
 		"onLanguage:lisp",
 		"onLanguage:common-lisp",
 		"onLanguage:scheme",
-		"onLanguage:python"
+		"onLanguage:python",
+		"onLanguage:javascript"
 	],
 	"main": "./client/out/extension",
 	"contributes": {
