--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -1,13 +1,17 @@
 [package]
+authors = ["framist <framist@163.com>"]
 name = "egg-language-server"
 version = "0.1.0"
 edition = "2021"
+license = "MIT"
+repository = "https://github.com/framist/egg-language-server"
+
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 chumsky = "1.0.0-alpha.3"	# 不再使用了
-env_logger = "^0.9.0"
+env_logger = "0.10.0"
 ropey = "^1.5.0"
 serde_json = "^1.0.78"
 tokio = { version = "1.17.0", features = ["full"] }
@@ -18,7 +22,7 @@ log = "0.4.14"
 im-rc = "15.0.0"
 
 # egg
-egg = "0.9.3"
+egg = {version = "0.9.3", features = []}
 
 rayon = "1.7"
 
