--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -21,7 +21,30 @@
 			],
 			"env": {
 				"SERVER_PATH_DEBUG": "${workspaceRoot}/target/debug/egg-language-server", // debug server 路径
+				"SERVER_PATH_RELEASE": "${workspaceRoot}/target/release/egg-language-server" // release server 路径
 			}
+		},
+		{
+			// TODO
+			"name": "Run Extension (Release Build)",
+			"type": "extensionHost",
+			"request": "launch",
+			"runtimeExecutable": "${execPath}",
+			"args": [
+				// "--disable-extensions", // 临时禁止其他的一切插件
+				"--extensionDevelopmentPath=${workspaceRoot}" // 需调试的 VSCode 插件目录
+			],
+			"outFiles": [
+				"${workspaceRoot}/client/out/**/*.js"
+			],
+			"preLaunchTask": "Build Server and Extension",
+			"skipFiles": [
+				"<node_internals>/**/*.js"
+			],
+			"env": {
+				"SERVER_PATH_DEBUG": "${workspaceRoot}/target/release/egg-language-server", // TODO 故意的
+				"SERVER_PATH_RELEASE": "${workspaceRoot}/target/release/egg-language-server" // release server 路径
+			}			
 		},
 		{
 			"type": "extensionHost",
@@ -42,7 +65,8 @@
 			},
 			// 客户端应得到的环境变量：服务器bin的路径
 			"env": {
-				"SERVER_PATH_DEBUG": "${workspaceRoot}/target/debug/egg-language-server"
+				"SERVER_PATH_DEBUG": "${workspaceRoot}/target/debug/egg-language-server",
+				"SERVER_PATH_RELEASE": "${workspaceRoot}/target/release/egg-language-server"
 			}
 		},
 		{
