--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
 					"type": "boolean",
 					"default": true,
 					"description": "Controls whether the server will show egg's explanations with let.",
-					"markdownDescription": "控制 是否显示 egg let 风格的重写方案解释",
+					"markdownDescription": "控制 egg 重写方案解释是否采用 let 风格",
 					"dependencies": {
 						"EgglanguageServer.ifExplanations": true
 					}
@@ -55,7 +55,7 @@
 					"type": "boolean",
 					"default": true,
 					"description": "Controls whether the server will show egg's IR.",
-					"markdownDescription": "控制 是否显示egg的中间表示"
+					"markdownDescription": "控制 是否显示 egg 的中间表示"
 				},
 				"EgglanguageServer.outLanguage": {
 					"scope": "resource",
