增加了测试相关的一系列内容

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,9 @@
 	"commentTranslate.hover.enabled": true,
 	"rust-analyzer.linkedProjects": [
 		"./server/Cargo.toml"
-	]
+	],
+	"[python]": {
+		"editor.defaultFormatter": "ms-python.autopep8"
+	},
+	"python.formatting.provider": "none"
 }
