--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -41,6 +41,13 @@ tree-sitter-sexp = { git = "https://github.com/AbstractMachinesLab/tree-sitter-s
 tree-sitter-scheme = { git = "https://github.com/6cdh/tree-sitter-scheme.git"}
 tree-sitter-java = "0.20.0"
 
+[dev-dependencies]
+criterion = "0.4.0"
+
+[[bench]]
+name = "my_benchmark"
+harness = false
+
 [features]
 # default = ["float"]
 float = []	# TODO 还没有完全实现
