--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -20,12 +20,10 @@
 				"<node_internals>/**/*.js"
 			],
 			"env": {
-				"SERVER_PATH_DEBUG": "${workspaceRoot}/target/debug/egg-language-server", // debug server 路径
-				"SERVER_PATH_RELEASE": "${workspaceRoot}/target/release/egg-language-server" // release server 路径
+				"SERVER_PATH": "${workspaceRoot}/target/debug/egg-language-server", // debug server 路径
 			}
 		},
 		{
-			// TODO
 			"name": "Run Extension (Release Build)",
 			"type": "extensionHost",
 			"request": "launch",
@@ -42,8 +40,7 @@
 				"<node_internals>/**/*.js"
 			],
 			"env": {
-				"SERVER_PATH_DEBUG": "${workspaceRoot}/target/release/egg-language-server", // TODO 故意的
-				"SERVER_PATH_RELEASE": "${workspaceRoot}/target/release/egg-language-server" // release server 路径
+				"SERVER_PATH": "${workspaceRoot}/target/release/egg-language-server", // release server 路径
 			}			
 		},
 		{
@@ -77,7 +74,7 @@
 				"type": "npm",
 				"script": "watch"
 			},
-			// 客户端应得到的环境变量：服务器bin的路径
+			// 客户端应得到的环境变量：服务器 bin 的路径
 			"env": {
 				"SERVER_PATH_DEBUG": "${workspaceRoot}/target/debug/egg-language-server",
 				"SERVER_PATH_RELEASE": "${workspaceRoot}/target/release/egg-language-server"
