--- a/client/package.json
+++ b/client/package.json
@@ -1,13 +1,13 @@
 {
-	"name": "lsp-sample-client",
+	"name": "egg-language-client",
 	"description": "VSCode part of a language server",
-	"author": "Microsoft Corporation",
+	"author": "framist",
 	"license": "MIT",
 	"version": "0.0.1",
 	"publisher": "vscode",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/Microsoft/vscode-extension-samples"
+		"url": "https://github.com/framist/egg-language-server"
 	},
 	"engines": {
 		"vscode": "^1.63.0"
