--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -35,7 +35,7 @@
 				"$tsc-watch"
 			]
 		},
-
+		// Server
 		{
 			"label": "Build Server",
 			"group": "build",
@@ -49,6 +49,36 @@
 			"type": "shell",
 			"command": "cargo build --release",
 			"problemMatcher": "$rustc"
+		},
+		{
+			"label": "Build Server (x86_64-unknown-linux-gnu release)",
+			"group": "build",
+			"type": "shell",
+			"command": "cargo build --release --target x86_64-unknown-linux-gnu",
+			"problemMatcher": "$rustc"			
+		},
+		{
+			"label": "Build Server (x86_64-pc-windows-gnu release)",
+			"group": "build",
+			"type": "shell",
+			"command": "cargo build --release --target x86_64-pc-windows-gnu",
+			"problemMatcher": "$rustc"		
+		},
+		{
+			"label": "Build Server (aarch64-unknown-linux-gnu release)",
+			"group": "build",
+			"type": "shell",
+			"command": "cargo build --release --target aarch64-unknown-linux-gnu",
+			"problemMatcher": "$rustc"		
+		},
+		{
+			"label": "Build Server all platform",
+			"group": "build",
+			"dependsOn":[
+				"Build Server (x86_64-unknown-linux-gnu release)",
+				"Build Server (x86_64-pc-windows-gnu release)",
+				// "Build Server (aarch64-unknown-linux-gnu release)"
+			]
 		},
 		// 联合调试
 		{
@@ -68,9 +98,9 @@
 			"problemMatcher": "$rustc"
 		},
 		{
-			"label": "Build Server (release) and Extension (release)",
+			"label": "Build Server (all, release) and Extension (release)",
 			"dependsOn": [
-				"Build Server (release)",
+				"Build Server all platform",
 				"Build Extension (release)"
 			],
 			"problemMatcher": "$rustc"
