--- a/.vscodeignore
+++ b/.vscodeignore
@@ -17,7 +17,9 @@ client/
 # server
 server/
 target/
-!target/release/egg-language-server
+!target/x86_64-unknown-linux-gnu/release/egg-language-server
+!target/x86_64-pc-windows-gnu/release/egg-language-server.exe
+!target/aarch64-unknown-linux-gnu/release/egg-language-server
 Cargo.*
 .eslintrc.js 
 .eslintignore
