--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,8 @@ client/server
 # rust
 /server/target/
 /target/
+# !target/x86_64-unknown-linux-gnu/release/egg-language-server
+# !target/x86_64-pc-windows-msvc/release/egg-language-server.exe
 
 # test
 scripts/*.csv
