可用性提升

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
 	},
 	"icon": "doc/asserts/icon_128.png",
 	"license": "MIT",
-	"version": "0.1.4",
+	"version": "0.1.5",
+	"preview": true,
 	"engines": {
 		"vscode": "^1.76.0"
 	},
