--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
 	"editor.insertSpaces": false,
-	// 关闭tsc任务自动检测，因为我们有必要的任务作为npm脚本
+	// 关闭 tsc 任务自动检测，因为我们有必要的任务作为 npm 脚本
 	"typescript.tsc.autoDetect": "off",
 	"typescript.preferences.quoteStyle": "single",
 	"editor.codeActionsOnSave": {
@@ -13,5 +13,13 @@
 	"[python]": {
 		"editor.defaultFormatter": "ms-python.autopep8"
 	},
-	"python.formatting.provider": "none"
+	"workbench.colorCustomizations": {
+        // "titleBar.activeBackground": "#4e3907",
+        // "titleBar.inactiveBackground": "#2e1d0499",
+        // "titleBar.activeForeground": "#e7e7e7",
+        // "titleBar.inactiveForeground": "#e7e7e799",
+		"statusBar.background": "#5b4002",
+        "statusBarItem.hoverBackground": "#cd860ca7",
+        "statusBar.foreground": "#e7e7e7"
+    },
 }
