--- a/.vscodeignore
+++ b/.vscodeignore
@@ -17,9 +17,13 @@ client/
 # server
 server/
 target/
-!target/x86_64-unknown-linux-gnu/release/egg-language-server
+!target/*/release/egg-language-server
+# 未处理好的问题，先忽略
+# !target/*/release/egg-language-server.exe
+# target/*/release/*.dll
+# target/i686-pc-windows-gnu/release/egg-language-server.exe
+# target/x86_64-pc-windows-gnu/release/egg-language-server.exe
 !target/x86_64-pc-windows-msvc/release/egg-language-server.exe
-# !target/aarch64-unknown-linux-gnu/release/egg-language-server
 Cargo.*
 .eslintrc.js 
 .eslintignore
