--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,22 +49,23 @@ jobs:
             npm_config_arch: arm64
     runs-on: ${{ matrix.os }}
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
       - run: cargo build --release
-      - uses: actions/setup-node@v2
+      - uses: actions/setup-node@v3
         with:
-          node-version: 14.x
+          node-version: '16'
       - run: npm install
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           npm_config_arch: ${{ matrix.npm_config_arch }}
       - shell: pwsh
         run: echo "target=${{ matrix.platform }}-${{ matrix.arch }}" >> $env:GITHUB_ENV
+      - run: npx vsce ls
       - run: npx vsce package --target ${{ env.target }}
-      - uses: actions/upload-artifact@v2
+      - uses: actions/upload-artifact@v3
         with:
           name: ${{ env.target }}
           path: "*.vsix"
@@ -74,7 +75,7 @@ jobs:
   #   needs: build
   #   if: success() && startsWith( github.ref, 'refs/tags/')
   #   steps:
-  #     - uses: actions/download-artifact@v2
+  #     - uses: actions/download-artifact@v3
   #     - run: npx vsce publish --packagePath $(find . -iname *.vsix)
   #       env:
   #         VSCE_PAT: ${{ secrets.VSCE_PAT }}
