--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,6 +53,16 @@ jobs:
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
+
+      - name: Cache cargo
+        uses: actions/cache@v2
+        with:
+          path: |
+            ~/.cargo/bin
+            ~/.cargo/registry
+            target
+          key: ${{ runner.os }}-cargo
+
       - uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
@@ -62,7 +72,7 @@ jobs:
         
       - uses: actions/setup-node@v3
         with:
-          node-version: '16'
+          node-version: 18
       - run: npm install
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -76,12 +86,12 @@ jobs:
           name: ${{ env.target }}
           path: "*.vsix"
 
-  # publish:
-  #   runs-on: ubuntu-latest
-  #   needs: build
-  #   if: success() && startsWith( github.ref, 'refs/tags/')
-  #   steps:
-  #     - uses: actions/download-artifact@v3
-  #     - run: npx vsce publish --packagePath $(find . -iname *.vsix)
-  #       env:
-  #         VSCE_PAT: ${{ secrets.VSCE_PAT }}
+  publish:
+    runs-on: ubuntu-latest
+    needs: build
+    if: success() && startsWith( github.ref, 'refs/tags/')
+    steps:
+      - uses: actions/download-artifact@v3
+      - run: npx vsce publish --packagePath $(find . -iname *.vsix)
+        env:
+          VSCE_PAT: ${{ secrets.VSCE_PAT }}
