--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -54,19 +54,12 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Cache cargo
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.cargo/bin/
-            ~/.cargo/registry/index/
-            ~/.cargo/registry/cache/
-            ~/.cargo/git/db/
-            target/
-          key: ${{ matrix.platform }}-${{ matrix.arch }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+      - name: rust Cache
+        uses: Swatinem/rust-cache@v2
 
       - uses: actions-rs/toolchain@v1
         with:
+          profile: minimal
           toolchain: stable
       - run: cargo build --release
       # - run: cargo test --release
