--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,8 +18,8 @@
         // "titleBar.inactiveBackground": "#2e1d0499",
         // "titleBar.activeForeground": "#e7e7e7",
         // "titleBar.inactiveForeground": "#e7e7e799",
-		"statusBar.background": "#5b4002",
-        "statusBarItem.hoverBackground": "#cd860ca7",
+		"statusBar.background": "#685106",
+        "statusBarItem.hoverBackground": "#cda00ca7",
         "statusBar.foreground": "#e7e7e7"
     },
 }
