--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,7 @@ on:
     
 jobs:
   build:
-    # if: startsWith( github.ref, 'refs/tags/')
+    if: startsWith( github.ref, 'refs/tags/')
     strategy:
       matrix:
         include:
