--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -82,6 +82,8 @@ jobs:
           path: "*.vsix"
 
   publish:
+    permissions:
+      contents: write
     runs-on: ubuntu-latest
     needs: build
     if: success() && startsWith( github.ref, 'refs/tags/')
